# hermes-cyclus

./: .gitignore  AGENT.md  ARCHITECTURE.md  DOCTRINE.md  LOOP.md  PRINCIPLES.md  README.md  STATE.md  __init__.py  config.yaml  plugin.yaml  pyproject.toml  queue.py  specs.py
.cyclus/: .gitignore
.cyclus/plans/: queue-rewrite.md  saturate-fleet-infra-gb10-plan.md  saturate-fleet-infra-gb10-spec.yaml  spec-yaml-pydantic-gate-plan.md  spec-yaml-pydantic-gate-spec.yaml
.github/workflows/: ci.yml
docs/: AddyOsmani_com_-_Loop_Engineering.md  anti-patterns.md  ldd.md  tutorial.md
docs/resources/: Hermes Agent Sub-Agent Orchestration  Comprehensive Capabilities Reference (v2026.7.1).md  Loop_Engineering.md  README.md  The_Art_of_Loop_Engineering.md  What_Is_Loop_Engineering_AI_Feedback_Loops_Kilo.md  What_Is_Loop_Engineering_The_New_Meta_for_AI_Coding_Agents_MindStudio.md  karpathy-skill-issue-transcript.md  ralph_loop.md
examples/: README.md
examples/autoresearch/code/: prepare.py  pyproject.toml  train.py
examples/circle_packing/: README.md  spec.md  spec.yaml
examples/circle_packing/code/: config.yaml  evaluator.py
examples/finetuning/: README.md
examples/function_minimization/: README.md  STATE.md  spec.md  spec.yaml
examples/function_minimization/code/: config.yaml  evaluator.py  initial_program.py
examples/signal_processing/: config.yaml  evaluator.py  initial_program.py  requirements.txt
examples/test_coverage/: README.md  spec.md  spec.yaml
references/: role-research-verifier.md
skills/cyclus-autopilot/: SKILL.md
skills/cyclus-deep-interview/: GAPS.md  SKILL.md
skills/cyclus-deep-research/: SKILL.md
skills/cyclus-interview/: GAPS.md  SKILL.md
skills/cyclus-loop/: SKILL.md
skills/cyclus-loop-design/: SKILL.md
skills/cyclus-loop-design/references/: pitfalls.md  role-loop-architect.md  role-loop-critic.md  role-loop-planner.md  spec-template.yaml
skills/cyclus-loop-dispatcher/: SKILL.md
skills/cyclus-loop-dispatcher/references/: executor-goal-template.md
skills/cyclus-loop-task/: SKILL.md
skills/cyclus-loop/references/: architect-final-review-template.md  executor-goal-template.md  verifier-goal-template.md
skills/cyclus-plan/: SKILL.md
skills/cyclus-plan-dispatcher/: SKILL.md
skills/cyclus-plan/references/: role-architect.md  role-critic.md  role-planner.md
skills/cyclus-ralph/: SKILL.md
skills/cyclus-ralph-driver/: SKILL.md
skills/cyclus-ralph-driver/references/: executor-goal-template.md  verifier-goal-template.md
skills/cyclus-ralph-task/: SKILL.md
skills/cyclus-ralplan/: SKILL.md
skills/cyclus-ralplan-driver/: SKILL.md
skills/cyclus-research/: SKILL.md
skills/cyclus-triage/: SKILL.md
skills/cyclus-triage-dispatcher/: SKILL.md
skills/cyclus-triage-driver/: SKILL.md
skills/cyclus-triage/references/: orchestrator-review-template.md  triage-doc-template.md
templates/: dot-cyclus-gitignore  dot-cyclus-readme.md
tests/: integration_runner.py  test_config.py  test_coverage_final.py  test_cyclus_backend_env.py  test_evidence.py  test_exception_branches.py  test_init.py  test_integration.py  test_queue.py  test_queue_edge_cases.py  test_queue_tool.py  test_queue_tool_kanban.py  test_queue_tool_saturate.py  test_spec_validation.py
tools/: evidence_tool.py  queue_tool.py
