[project]
name = "hermes-cyclus"
version = "18.0.0"
description = "Loop engineering primitives for Hermes Agent — typed deliberation skills on the Saturate loop taxonomy"
authors = [{ name = "Donald Thompson" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "loop-spec-py",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
saturate = [
    # Pinned to a specific commit for reproducibility.
    # Works with pip, poetry, and uv via direct URL (PEP 508).
    # Requires hatchling allow-direct-references = true (set above).
    "saturate @ git+https://github.com/witt3rd/saturate@e715157c56cbdeacd2c5f8d0a42931dc6eea0bcc",
]

[project.entry-points."hermes_agent.plugins"]
cyclus = "cyclus:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".."]

[tool.ruff]
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
loop-spec-py = { git = "https://github.com/witt3rd/loop-spec", subdirectory = "python" }
# Local dev override — uv uses this path instead of the pinned git URL above.
# Remove or adjust for your local setup; this is not used by pip/poetry.
saturate = { git = "https://github.com/witt3rd/saturate" }

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
